Changes to be committed: 	modified:   README.md 	modified:   angular.json 	modified:   package-lock.json 	modified:   package.json 	new file:   projects/ngx-animal-randoms/README.md 	new file:   projects/ngx-animal-randoms/ng-package.json 	new file:   projects/ngx-animal-randoms/package.json 	new file:   projects/ngx-animal-randoms/src/lib/cat-images/cat-images.component.css 	new file:   projects/ngx-animal-randoms/src/lib/cat-images/cat-images.component.html 	new file:   projects/ngx-animal-randoms/src/lib/cat-images/cat-images.component.spec.ts 	new file:   projects/ngx-animal-randoms/src/lib/cat-images/cat-images.component.ts 	new file:   projects/ngx-animal-randoms/src/lib/dog-facts/dog-facts.component.css 	new file:   projects/ngx-animal-randoms/src/lib/dog-facts/dog-facts.component.html 	new file:   projects/ngx-animal-randoms/src/lib/dog-facts/dog-facts.component.spec.ts 	new file:   projects/ngx-animal-randoms/src/lib/dog-facts/dog-facts.component.ts 	new file:   projects/ngx-animal-randoms/src/lib/ngx-animal-randoms.component.spec.ts 	new file:   projects/ngx-animal-randoms/src/lib/ngx-animal-randoms.component.ts 	new file:   projects/ngx-animal-randoms/src/lib/ngx-animal-randoms.module.ts 	new file:   projects/ngx-animal-randoms/src/lib/ngx-animal-randoms.service.spec.ts 	new file:   projects/ngx-animal-randoms/src/lib/ngx-animal-randoms.service.ts 	new file:   projects/ngx-animal-randoms/src/public-api.ts 	new file:   projects/ngx-animal-randoms/tsconfig.lib.json 	new file:   projects/ngx-animal-randoms/tsconfig.lib.prod.json 	new file:   projects/ngx-animal-randoms/tsconfig.spec.json 	modified:   src/app/app.component.html 	modified:   src/app/app.component.ts 	modified:   src/app/app.module.ts 	new file:   src/app/cat-facts/cat-facts.component.css 	new file:   src/app/cat-facts/cat-facts.component.html 	new file:   src/app/cat-facts/cat-facts.component.spec.ts 	new file:   src/app/cat-facts/cat-facts.component.ts 	new file:   src/app/cat-facts/cat-facts

--- a/angular.json
+++ b/angular.json
@@ -106,6 +106,75 @@
           }
         }
       }
+    },
+    "ngx-animal-random-lib": {
+      "projectType": "library",
+      "root": "projects/ngx-animal-random-lib",
+      "sourceRoot": "projects/ngx-animal-random-lib/src",
+      "prefix": "animal",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "project": "projects/ngx-animal-random-lib/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/ngx-animal-random-lib/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "projects/ngx-animal-random-lib/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "tsConfig": "projects/ngx-animal-random-lib/tsconfig.spec.json",
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ]
+          }
+        }
+      }
+    },
+    "ngx-animal-randoms": {
+      "projectType": "library",
+      "root": "projects/ngx-animal-randoms",
+      "sourceRoot": "projects/ngx-animal-randoms/src",
+      "prefix": "animal",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "project": "projects/ngx-animal-randoms/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/ngx-animal-randoms/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "projects/ngx-animal-randoms/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "tsConfig": "projects/ngx-animal-randoms/tsconfig.spec.json",
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ]
+          }
+        }
+      }
     }
+  },
+  "cli": {
+    "analytics": "68e9f03d-62b4-4cd9-8c3d-03f950453aa1"
   }
 }
